API
/group/<groupName>/transparency/average: current average transparency inside the group

/group/<groupName>/temperature/average: current average temperature inside the group
