# internal/infra/http/router.go
@@ -11,7 +11,7 @@ import (
 
 func Router(
 	sensorController controllers.SensorController,
-	readingController controllers.ReadingController,
+	groupController controllers.GroupController,
 ) http.Handler {
 
 	router := chi.NewRouter()
@@ -40,7 +40,7 @@ func Router(
 			apiRouter.Group(func(apiRouter chi.Router) {
 
 				SensorRouter(apiRouter, sensorController)
-				//ReadingRouter(apiRouter, readingController)
+				GroupRouter(apiRouter, groupController)
 
 				apiRouter.Handle("/*", NotFoundJSON())
 			})
@@ -59,5 +59,14 @@ func Router(
 func SensorRouter(r chi.Router, sensorController controllers.SensorController) {
 	r.Route("/sensor", func(sensorRouter chi.Router) {
 		sensorRouter.Get("/{codeName}/temperature/average", sensorController.GetSensorTemperatureAverage())
+	})
+}
+
+func GroupRouter(r chi.Router, groupController controllers.GroupController) {
+	r.Route("/group", func(sensorRouter chi.Router) {
+		sensorRouter.Get("/{groupName}/temperature/average", groupController.GetGroupTemperatureAverage())
+		sensorRouter.Get("/{groupName}/transparency/average", groupController.GetGroupTransparencyAverage())
+		//sensorRouter.Get("/{groupName}/species", groupController.GetGroupFishSpecies())
+		//sensorRouter.Get("/{groupName}/species/top/{N}", groupController.GetGroupTopFishSpecies())
 	})
 }
